<resources>
    <string name="app_name">ConvenientConverters</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_the_convenient_converter_app">Welcome to the Convenient Converter App!</string>
    <string name="milestokilos">MilesToKilos</string>
    <string name="tipcalculator">TipCalculator</string>
    <string name="farenheittocelsius">FarenheitToCelsius</string>
    <string name="kilos">Kilos</string>
    <string name="conversion">Conversion</string>
    <string name="miles">Miles</string>
    <string name="farenheit">Farenheit</string>
    <string name="celsius">Celsius</string>
    <string name="conversion">Conversion</string>
    <string name="total">Total</string>
    <string name="tippercentage">tipPercentage</string>
    <string name="People_Paying">split the bill with a certain amount of people</string>
    <string name="people_paying">People Paying</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
</resources>
